<resources>
    <string name="app_name">ImageApp3</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="photoImageViewDesc">Photo from camera or gallery</string>
    <string name="imageSelectionString">Please select an image</string>
    <string name="imageSelectionFromCamera">Camera</string>
    <string name="imageSelectionFromGallery">Gallery</string>
    <string name="imageEditingActivitySelection">Edit an Image</string>
    <string name="splinesActivitySelection">Draw splines</string>
    <string name="cubeActivitySelection">Rotate a cube</string>
    <string name="activitySelectionString">Select what you want to do:</string>
    <string name="invertedFilterString">Inverted</string>
    <string name="grayFilterString">Gray</string>
    <string name="agbrFilterString">AGBR</string>
    <string name="rotateButtonString">Rotate</string>
    <string name="scalingCoefficientString">Insert Scaling Coefficient</string>
    <string name="scalingWidthString">Width :</string>
    <string name="scalingHeightString">Height:</string>
    <string name="applyScalingButtonString">OK</string>
    <string name="permissionDeniedMessage">Permission denied</string>
    <string name="rotateFragmentMenuItemString">Rotate</string>
    <string name="filterFragmentMenuItemString">Filter</string>
    <string name="scaleFragmentMenuItemString">Scale</string>
    <string name="sharpeningFragmentMenuItemString">Sharpening</string>
    <string name="sepiaFilterString">Sepia</string>
    <string name="sharpenButtonString">Sharpen</string>
    <string name="sharpeningRadiusString">Radius</string>
    <string name="sharpeningDefaultValue">0</string>
    <string name="sharpeningThresholdString">Threshold</string>
    <string name="sharpeningAmount">Amount</string>
    <string name="sharpeningPercentString">%</string>
</resources>